force-app/main/default/objects/Review__c/fields/AVO_Address__c.field-meta.xml
<CustomField>
    <fullName>AVO_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>