force-app/main/default/objects/Review__c/fields/AVO_Permit1__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit</label>
    <referenceTo>Permit__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>