force-app/main/default/objects/Review__c/fields/AVO_Permit__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit</label>
    <referenceTo>AVO_Permit__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>