force-app/main/default/objects/Review__c/fields/AVO_Review_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Review_Name__c</fullName>
    <label>Review Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>