force-app/main/default/objects/Review__c/fields/AVO_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Started_Date__c</fullName>
    <label>Started Date</label>
    <type>Date</type>
</CustomField>